[B][COLOR=FFFF8C00]BUILD 12.4.0 - RELEASE DATE 11/14/2022[/COLOR][/B]
Improved:  Library Editor can be launched for sets and MVs
Improved:  New Nexus timer for displaying SeekBar
New:  Add new Nexus Favourites Browser Window as a media window

[B][COLOR=FFFF8C00]BUILD 12.3.0 - RELEASE DATE 05/23/2022[/COLOR][/B]
New:  Show hdr flags
New:  Add new video aspect ratio flags (Nexus feature)
New:  Add button to show/hide password entry in virtual keyboard (Nexus feature)
New:  Use min:sec for music video runtime display
New:  on video info dialog, click button on MPAA rating tag for more info
New:  Widgets on home page for addons (programs menu)
Fix:  Default home menu weather settings submenu had obsolete window
Improved:  Extendedinfo script dialog windows
Improved:  Use colorpicker button to set video case colors

[B][COLOR=FFFF8C00]BUILD 12.2.0 - RELEASE DATE 12/31/2021[/COLOR][/B]
New:  Add new colorbutton and use in subtitle settings (Nexus feature)
Improved:  ROM Collection Browser and LRC lyrics addons now are optional
Improved:  All 11.2.0 fixes incorporated

[B][COLOR=FFFF8C00]BUILD 11.2.0 - RELEASE DATE 12/31/2021[/COLOR][/B]
New:  Fanart[nn] can be used instead of extrafanart folders.  Use skin settings / general dialog to toggle.  (availaible fanart1-fanart10)
New:  Suport for artowrk downloader addon has been removed
Improved:  Option to show fanart[nn] in the multilist for videos
Improved:    Better display of the number of movies in a collection (still have a limit of 20 posters)
Improved:  Full screen video  will now show playerspeeds of 1.6-2.0 in seek bar (Kodi improvement)
Improved:  Video "premiered" date will be shown (if available) vice year in details

[B][COLOR=FFFF8C00]BUILD 11.1.1 - RELEASE DATE 06/15/2021[/COLOR][/B]
Improved:  Extensive rework of PVR and LiveTV to incorporate features from
Leia and Matrix including timeshift and reminders.
Improved:  Support for LiveTV - Radio including new Radio settings availalable in 